Switched from Runtime.getRuntime().exec() to ProcessBuilder for starting the process